# rules_css

./: .bazelrc  .deleted.bazelrc  .eslintrc.js  .gitignore  BUILD.bazel  BUILD.file.bazel  README.md  WORKSPACE.bazel  deleted.bazelrc  package.json
css/: BUILD.bazel  providers.bzl  rules.bzl
docs/: BUILD.bazel  gen.sh  sass.md
docs/stardoc/: sass_providers.md  sass_rules.md
rules/: BUILD.bazel  npm_data.bzl  workspace.bzl
sass/: BUILD.bazel  providers.bzl  rules.bzl  workspace.bzl
sass/compiler/: BUILD.bazel
sass/compiler/src/: main.ts  sass-loader.d.ts  worker.ts
sass/doc/: BUILD.bazel  gen.sh
sass/test/: BUILD.bazel  test_basic.sh  test_dep.sh
sass/test/bazel/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
sass/test/bazel/basic/: BUILD.bazel  styles.scss
sass/test/bazel/dep/: BUILD.bazel  styles.scss
scripts/: gen-bazelrc.sh  install-deps.sh  lint.sh
test/: workspace0.bzl  workspace1.bzl
tools/: BUILD.bazel  deleted.bazelrc  format.sh  gen-bazelrc.sh  install-npm.sh  lint.sh
