load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_file")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_archive")

package(default_visibility = ["//visibility:public"])

test_suite(
    name = "test",
    tests = [
        "//sass/test",
    ],
)

js_file(
    name = "eslint_config",
    src = ".eslintrc.js",
    root = ":root",
)

cjs_root(
    name = "root",
    package_name = "@better-rules-css/root",
    descriptors = ["package.json"],
)

nodejs_archive(
    name = "nodejs_archive",
    deps = [
        "@better_rules_css_npm//@types/argparse:lib",
        "@better_rules_css_npm//@types/sass-loader:lib",
        "@better_rules_css_npm//argparse:lib",
        "@better_rules_css_npm//enhanced-resolve:lib",
        "@better_rules_css_npm//sass:lib",
        "@better_rules_css_npm//sass-loader:lib",
        "@better_rules_css_npm//sass-svg-uri:lib",
        "@better_rules_javascript//bazel/worker:lib",
        "@better_rules_javascript//commonjs/package:lib",
        "@better_rules_javascript//nodejs/fs-linker:lib",
        "@better_rules_javascript//util/json:lib",
    ],
)

js_file(
    name = "prettier_config",
    src = "prettierrc.yml",
    root = ":root",
)
