load("@rules_file//buildifier:rules.bzl", "buildifier")
load("@rules_file//generate:rules.bzl", "format", "generate_test", "multi_generate")
load("@better_rules_javascript//prettier:rules.bzl", "configure_prettier")
load("@better_rules_javascript//eslint:rules.bzl", "configure_eslint")
load("@better_rules_javascript//npm:rules.bzl", "yarn_resolve")

buildifier(
    name = "buildifier",
)

format(
    name = "buildifier_format",
    srcs = ["@better_rules_css_files//:buildifier_files"],
    formatter = ":buildifier",
    strip_prefix = "files",
)

configure_eslint(
    name = "eslint",
    config = "//:eslint_config",
    dep = "@better_rules_javascript_npm//eslint:lib",
    plugins = [
        "@better_rules_javascript_npm//typescript:lib",
        "@better_rules_javascript_npm//@typescript-eslint/eslint-plugin:lib",
        "@better_rules_javascript_npm//@typescript-eslint/parser:lib",
    ],
)

sh_binary(
    name = "gen_bazelrc",
    srcs = ["gen-bazelrc.sh"],
    data = ["deleted.bazelrc.tpl"],
)

sh_binary(
    name = "install_npm",
    srcs = ["install-npm.sh"],
    data = [":install_npm_data"],
)

filegroup(
    name = "install_npm_data",
    srcs = ["//:nodejs_archive"],
)

format(
    name = "lint",
    srcs = ["@better_rules_css_files//:eslint_files"],
    formatter = ":eslint",
    prefix = "external/better_rules_css_files/files",
)

generate_test(
    name = "lint_test",
    generate = ":lint",
)

multi_generate(
    name = "format",
    deps = [
        ":buildifier_format",
        ":prettier_format",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
)

configure_prettier(
    name = "prettier",
    config = "//:prettier_config",
    dep = "@better_rules_javascript_npm//prettier:lib",
)

format(
    name = "prettier_format",
    srcs = ["@better_rules_css_files//:prettier_files"],
    formatter = ":prettier",
    prefix = "files",
)

yarn_resolve(
    name = "resolve_npm",
    output = "rules/npm_data.bzl",
)
