workspace(name = "better_rules_css_test")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "16de038c484145363340eeaf0e97a0c9889a931b"

http_archive(
    name = "bazel_skylib",
    sha256 = "96e0cd3f731f0caef9e9919aa119ecc6dace36b149c2f47e40aa50587790402b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION],
)

# Protobuf

PROTO_VERSION = "7e4afce6fe62dbff0a4a03450143146f9f2d7488"

http_archive(
    name = "rules_proto",
    sha256 = "8e7d59a5b12b233be5652e3d29f42fba01c7cbab09f6b3a8d0a57ed6d1e9a0da",
    strip_prefix = "rules_proto-%s" % PROTO_VERSION,
    urls = ["https://github.com/bazelbuild/rules_proto/archive/%s.tar.gz" % PROTO_VERSION],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

# Protobuf

PROTO_GRPC_VERSION = "2.0.0"

http_archive(
    name = "rules_proto_grpc",
    sha256 = "d771584bbff98698e7cb3cb31c132ee206a972569f4dc8b65acbdd934d156b33",
    strip_prefix = "rules_proto_grpc-%s" % PROTO_GRPC_VERSION,
    urls = ["https://github.com/rules-proto-grpc/rules_proto_grpc/archive/%s.tar.gz" % PROTO_GRPC_VERSION],
)

load("@rules_proto_grpc//:repositories.bzl", "rules_proto_grpc_repos", "rules_proto_grpc_toolchains")

rules_proto_grpc_toolchains()

rules_proto_grpc_repos()

# File

FILE_VERSION = "084981b3013475617d86c24d67844786c0ea3452"

http_archive(
    name = "rules_file",
    sha256 = "33feee1e6318d48a41e28bffa68b7a6b29d70cf3e2cdf245e9ea98690bcbcb36",
    strip_prefix = "rules_file-%s" % FILE_VERSION,
    url = "https://github.com/rivethealth/rules_file/archive/%s.tar.gz" % FILE_VERSION,
)

# JavaScript

JAVACRIPT_VERSION = "abaeacdec4f530ed380e1986037e3795d3ee3092"

http_archive(
    name = "better_rules_javascript",
    sha256 = "3c90b44906ef6dd78c7cc30742bf84ea97c8cbcf8a201c6276627b36f1ea5a1e",
    strip_prefix = "rules_javascript-%s" % JAVACRIPT_VERSION,
    urls = [
        "https://github.com/rivethealth/rules_javascript/archive/%s.zip" % JAVACRIPT_VERSION,
    ],
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

# CSS

local_repository(
    name = "better_rules_css",
    path = "../../../external/better_rules_css_files/files",
)

load("@better_rules_css//rules:workspace.bzl", "css_repositories")

css_repositories()
