workspace(name = "better_rules_css_test")

# CSS

local_repository(
    name = "better_rules_css",
    path = "../../../external/better_rules_css_files/files",
)

load("@better_rules_css//test:workspace0.bzl", "test_repositories0")

test_repositories0()

load("@better_rules_css//test:workspace1.bzl", "test_repositories1")

test_repositories1()
