load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_css//sass:rules.bzl", "sass_bundle", "sass_library")

cjs_root(
    name = "root",
    package_name = "@better-rules-css-test/dep",
    descriptors = ["package.json"],
    path = "root",
)

cjs_root(
    name = "lib_root",
    package_name = "@better-rules-css-test/dep-lib",
    descriptors = ["package.json"],
    path = "lib_root",
)

sass_library(
    name = "lib_sass",
    srcs = ["lib.scss"],
    prefix = "lib_root",
    root = ":lib_root",
)

sass_library(
    name = "sass",
    srcs = ["styles.scss"],
    prefix = "root",
    root = ":root",
    deps = [
        ":lib_sass",
        "@better_rules_css_npm//sass-svg-uri:sass",
    ],
)

sass_bundle(
    name = "css",
    out = "root/styles.css",
    compiler = "//:sassc",
    dep = ":sass",
    main = "styles.scss",
    root = ":root",
)
